@@ -33,6 +33,10 @@ module Fairy
 ##CONF.DEFAULT_EXTERNAL = nil
 ##CONF.DEFAULT_INTERNAL = nil
 
+##CONF.IGNORE_EXCEPTION_ON_FILTER = false
+#CONF.IGNORE_EXCEPTION_ON_FILTER = true
+
+
 ##CONF.MASTER_MAX_ACTIVE_PROCESSORS = 4
 #CONF.MASTER_MAX_ACTIVE_PROCESSORS = 2
 
