@@ -37,6 +37,7 @@ module Fairy
       Log.debug(self, "Njob number of %d", @njobs.size)
       njob
     end
+    DeepConnect.def_method_spec(self, "REF create_njob(VAL, REF, VAL, *DEFAULT)")
 
     def abort_running
       @status_mutex.synchronize do
