@@ -86,6 +86,30 @@ module Fairy
 	  @context.class::GlobalBreakFromOther
 	raise
 
+      rescue
+	if @context.IGNORE_EXCEPTION
+	  Log::warn("IGNORE_EXCEPTON!!")
+	end
+	Log::warn(self) do |sio|
+	  sio.puts "Warn: Exception raised:"
+	  sio.puts $!
+	  for l in $@
+	    sio.puts "\t#{l}"
+	  end
+	end
+
+	if @context.IGNORE_EXCEPTION
+	  return Import::TOKEN_NULLVALUE
+	else
+	  bt = $!.backtrace
+	  bt = bt.select{|l| /fairy.*(share|job|backend|node|processor|controller)|deep-connect|__FORWARDABLE__|bin.*processor/ !~ l} unless CONF.DEBUG_FULL_BACKTRACE
+	  bt.first.sub!("bind", @block_source.caller_method)
+	  bt.push *@block_source.backtrace.dc_deep_copy
+	  $!.set_backtrace(bt)
+
+	  @exception_handler.handle_exception($!)
+	end
+
       rescue Exception
 	Log::warn(self) do |sio|
 	  sio.puts "Warn: Exception raised:"
