@@ -84,6 +84,8 @@ module Fairy
     def_prop :DEFAULT_EXTERNAL
     def_prop :DEFAULT_INTERNAL
 
+    def_prop :IGNORE_EXCEPTION_ON_FILTER
+
     def_prop :MASTER_MAX_ACTIVE_PROCESSORS
 
     def_prop :CONTROLLER_INPUT_PROCESSOR_N
@@ -243,6 +245,8 @@ module Fairy
 
   DEFAULT_CONF.DEFAULT_EXTERNAL = nil
   DEFAULT_CONF.DEFAULT_INTERNAL = nil
+
+  DEFAULT_CONF.IGNORE_EXCEPTION_ON_FILTER = false
 
   DEFAULT_CONF.MASTER_MAX_ACTIVE_PROCESSORS = 4
 
